fixed toolbox card top alignment

--- a/public/stylesheets/home.css
+++ b/public/stylesheets/home.css
@@ -1,5 +1,5 @@
 .page_style {
-	margin: 0 auto;
+	margin: 38px auto;
 	width: 1220px;
 	display: flex;
 	flex-direction: row;
