--- a/public/stylesheets/toolbox_card.css
+++ b/public/stylesheets/toolbox_card.css
@@ -5,10 +5,10 @@
 	border: 1px solid black;
 	background-color: #dfd9c2;
 	border-radius: 10px;
-	box-shadow: 5px 5px lightgray;
+	box-shadow: 0 0 10px lightgrey;
 	height: fit-content;
 	padding: 20px;
-	margin: 10px 10px;
+	margin: 15px;
 	box-sizing: content-box;
 }
 
